--- a/src/components/TestimonialsNoBg.astro
+++ b/src/components/TestimonialsNoBg.astro
@@ -26,7 +26,7 @@ const data = Astro.currentLocale === "en" ? enData : esData;
 
 <section class="flex flex-col items-center bg-black">
     <div
-      class="max-w-[80vw] lg:max-w-[60vw] flex-1 flex flex-col gap-5 justify-center items-center content-center text-center mx-5 sm:mx-10 lg:mx-0 bg-sec-blue border-2 p-5 lg:p-14 z-10 relative overflow-hidden my-24"
+      class="max-w-[80vw] lg:max-w-[60vw] flex-1 flex flex-col gap-5 justify-center items-center content-center text-center mx-5 sm:mx-10 lg:mx-0 bg-sec-blue p-5 lg:p-14 z-10 relative overflow-hidden my-24"
     >
       <Image
         src={LogoWhiteNoText}
