--- a/src/pages/flota/simuladores.astro
+++ b/src/pages/flota/simuladores.astro
@@ -13,7 +13,7 @@ const data = {
     "Simuladores de Vuelo - Entrenamiento Avanzado para Pilotos - iFly Universidad Aeronáutica",
   siteDescription:
     "Entrena en simuladores de vuelo de última generación en iFly. Obtén una formación realista y segura para desarrollar tus habilidades como piloto aviador en diferentes situaciones de vuelo.",
-  headerImage: "images/simulador-airbus-a320.webp",
+  headerImage: "simuladores-banner",
   headerAlt: "Estudiantes de iFly recibiendo medalla",
   title: "Simuladores de Vuelo",
 };
