--- a/src/pages/nosotros/historia.astro
+++ b/src/pages/nosotros/historia.astro
@@ -10,7 +10,7 @@ const data = {
   siteTitle: "Nuestra Historia - iFly Universidad Aeronáutica",
   siteDescription:
     "Aprende sobre la historia de iFly, la primera universidad aeronáutica en México. Con años de experiencia en la formación de pilotos y profesionales de la aviación, somos líderes en la educación aeronáutica.",
-  headerImage: "images/estudiantes-graduados-afuera-del-hangar.webp",
+  headerImage: "filosofia-banner",
   headerAlt: "Estudiantes graduados de iFly",
   title: "Conoce Nuestros Inicios",
 };
