--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -12,8 +12,11 @@ import {
   EMAIL_ADDRESS,
 } from "../consts";
 import GeneralFAQs from "../components/GeneralFAQs";
-import Tecnam from "../assets/tecnam-no-bg.webp";
+import Tecnam from "../assets/tecnam-no-bg2.webp";
 import TestimonialsNoBg from "../components/TestimonialsNoBg.astro";
+import TestimonialsSwiper from "../components/TestimonialsSwiper.astro";
+import testimonialsSwiper from "../data/testimonialsSwiper";
+
 
 
 const CONTACT_FORM_WEBHOOK_URL = import.meta.env.CONTACT_FORM_WEBHOOK_URL;
@@ -37,7 +40,7 @@ const imgURL = "images/bg-clouds-from-above.webp";
 <BaseLayout siteTitle={data.siteTitle} siteDescription={data.siteDescription}>
   <ContactUsHeader slot="header" data={data} />
 
-  <div class="absolute h-[350vh] w-full bg-cover -z-50"
+  <div class="absolute h-[400vh] w-full bg-cover -z-50"
     style=`background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%), url(./${imgURL})`
   ></div>
 
@@ -214,8 +217,8 @@ const imgURL = "images/bg-clouds-from-above.webp";
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
-
-  <TestimonialsNoBg />
+  <TestimonialsSwiper content={testimonialsSwiper} />
+  <script src="../scripts/creativeSwiper.js"></script>
 </BaseLayout>
 
 <script define:vars={{ CONTACT_FORM_WEBHOOK_URL }}>
