--- a/src/layouts/CourseLayout.astro
+++ b/src/layouts/CourseLayout.astro
@@ -39,7 +39,7 @@ const esData = {
 //     "Do you want to know more about the program? Schedule a visit to our campus and meet one of our certified instructors.",
 // };
 
-const imageURL = "./../images/carreers-form-banner.webp";
+const imageURL = "carreers-form-banner";
 // const lang = Astro.currentLocale === "en" ? "en" : "es";
 // const info = Astro.currentLocale === "en" ? enData : esData;
 const info = esData;
