--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import IndexForm from "../components/IndexForm.astro";
 import TestimonialsSwiper from "../components/TestimonialsSwiper.astro";
 import testimonialsSwiper from "../data/testimonialsSwiper";
 
-const imageURL = "images/ifly-index-form-banner.png";
+const imageURL = "ifly-index-form-banner";
 
 ---
 
