--- a/src/components/TestimonialsBanner.astro
+++ b/src/components/TestimonialsBanner.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import TestimonialsBG from "../assets/ifly-admin-crew.webp";
 ---
 
-<section class="flex flex-col items-center relative top-0 custom-bg-gradient-xy h-[100vh]">
+<section class="flex flex-col items-center relative top-0 custom-bg-gradient-xy h-[75vh] lg:h-[90vh]">
   <Image
     src={TestimonialsBG}
     alt="Estudiante en hangar de iFly"
