--- a/src/components/TestimonialsSwiper.astro
+++ b/src/components/TestimonialsSwiper.astro
@@ -4,7 +4,7 @@ import ProgramCard from "./TestimonialsCard.astro";
 const { content } = Astro.props;
 ---
 
-<section class="py-8 overflow-hidden">
+<section class="py-8 px-4 overflow-hidden">
   <div class="">
     {
       content.upperHeading && (
