--- a/src/components/Counters.astro
+++ b/src/components/Counters.astro
@@ -23,11 +23,11 @@ const stats = Astro.currentLocale === "en" ? enStats : esStats;
 ---
 
 <section class="bg-main-black/5 relative pb-[30vh] bg-stripes bg-bottom bg-cover">
-  <div class="overflow-hidden h-[60vh] relative">
+  <div class="overflow-hidden lg:h-[60vh] relative">
     <Image
         src={Airplane}
         alt={data.imgAlt1}
-        class="absolute inset-0 object-cover object-center h-full w-full border-blue-y"
+        class="relative lg:inset-0 object-cover object-center lg:h-full w-full border-blue-y"
     />
   </div>
   <!-- <Image
@@ -37,7 +37,7 @@ const stats = Astro.currentLocale === "en" ? enStats : esStats;
   /> -->
 
   
-  <div class="relative -top-[60px] mx-auto max-w-7xl grid grid-cols-2 lg:grid-cols-4 grid-colors">
+  <div class="relative lg:-top-[60px] mx-auto max-w-7xl grid grid-cols-2 lg:grid-cols-4 grid-colors">
     {
       stats.map((stat) => (
         <CounterCard
