--- a/src/components/HomepageHeader.astro
+++ b/src/components/HomepageHeader.astro
@@ -36,13 +36,13 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
     src={Ellipse}
     alt="Estudiante en iFly"
     class="absolute top-0 w-full h-full object-cover -z-40"
-    quality={100}
+    quality={60}
     />
     <Image
     src={Logo}
     alt="Estudiante en iFly"
-    class="absolute top-[30%] w-full h-[22%] object-scale-down -z-20"
-    quality={100}
+    class="absolute top-[15%] lg:top-[30%] w-full h-[22%] object-scale-down -z-20"
+    quality={80}
     />
 
     <div class="absolute top-0 w-full h-full object-cover -z-30 bg-gradient-to-b from-black to-transparent"/>
