--- a/src/components/ProgramCard.astro
+++ b/src/components/ProgramCard.astro
@@ -27,15 +27,15 @@ if (!images[imagePath]) {
 
 <div class="max-w-[80vw] flex flex-row flex-wrap overflow-hidden text-white">
   <div
-    class="flex flex-col py-8 gap-3 justify-between h-full lg:w-[40vw] lg:h-[40vh] px-8 bg-stripes-blue bg-bottom bg-opacity-15"
+    class="flex flex-col py-8 gap-3 justify-between h-full lg:w-[40vw] lg:h-[40vh] max-w-[100%] px-2 lg:px-8 bg-stripes-blue bg-bottom bg-opacity-15"
   >
     <div class="flex flex-col gap-3">
-      <h3 class="word-clamp text-2xl lg:text-3xl font-semibold leading-tight">
+      <h3 class="line-clamp-2 text-2xl lg:text-3xl font-semibold leading-tight">
         {title}
       </h3>
       {
         subTitle?.length > 0 && (
-          <h3 class="word-clamp text-2xl lg:text-3xl leading-tight -skew-x-12">
+          <h3 class="word-clamp text-2xl lg:text-3xl leading-tight -skew-x-12 tracking-tight">
             - {subTitle}
           </h3>
         )
