--- a/src/layouts/CourseLayout.astro
+++ b/src/layouts/CourseLayout.astro
@@ -106,7 +106,7 @@ const info = esData;
               </ul>
             </div>
           </div>
-          <a href="#sign-up-form" class="btn-primary-white self-center w-2/5">
+          <a href="#sign-up-form" class="btn-primary-white self-center w-full lg:w-2/5">
             {info.primaryButton}
           </a>
           <br/>
@@ -115,10 +115,10 @@ const info = esData;
             set:html={info.sidebarTitle3}
           >
           </h3>
-          <p class="text-xl px-8 w-8/12 self-center">
+          <p class="text-xl px-8 lg:w-8/12 self-center">
             {info.sidebarText}
           </p>
-          <a href="/contacto" class="btn-primary-white self-center w-2/5">
+          <a href="/contacto" class="btn-primary-white self-center w-full lg:w-2/5">
             {info.secondaryButton}
           </a>
       </div>
