fix fleet pages mobile

--- a/src/components/PlaneCard2.astro
+++ b/src/components/PlaneCard2.astro
@@ -17,7 +17,7 @@ if (!images[planeData.headerImage]) {
 }
 ---
 
-<div class="max-w-[80vw] flex flex-col lg:flex-row overflow-hidden text-white">
+<div class="w-full lg:max-w-[80vw] flex flex-col lg:flex-row overflow-hidden text-white">
   <div
     class="flex flex-col py-8 gap-3 justify-between h-full lg:w-[40vw] lg:h-[40vh] px-8 bg-stripes-blue bg-bottom bg-opacity-15"
   >
