--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,7 @@
     background-image:linear-gradient(to right, rgba(0, 76, 190, 0.3) 0%, rgba(0, 76, 190, 0.3) 100%) , url(../../public/images/bg-stripes.png);
   }  
   .bg-clouds-from-above {
-    background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/bg-clouds-from-above.webp);
+    background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(../assets/bg-clouds-from-above.webp);
   }  
   .aviation-management-banner {
     background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/ifly-aviation-management-banner.webp);
@@ -52,9 +52,11 @@
   }  
   .flota-banner {
     background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/flota-banner.webp);
+    background-position: 15%;
   }  
   .simuladores-banner {
     background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/simuladores-banner.webp);
+    background-position: 40%;
   }  
   .filosofia-banner {
     background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/filosofia-banner.webp);
