--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,6 +60,7 @@
   }  
   .filosofia-banner {
     background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/filosofia-banner.webp);
+    background-position: 30%;
   }  
   .blog-banner {
     background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/blog-banner.webp);
