--- a/src/components/ContactUsHeader.astro
+++ b/src/components/ContactUsHeader.astro
@@ -13,7 +13,7 @@ const { data } = Astro.props;
 ---
 
 <header
-  class="relative isolate pt-14 overflow-hidden min-h-fit h-[40vh] lg:h-[85vh] text-white flex
+  class="relative isolate pt-20 lg:pt-14 overflow-hidden min-h-fit h-[40vh] lg:h-[85vh] text-white flex
     items-center bg-bottom bg-cover"
   style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.5) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(./${data.headerImage})`
 >
@@ -27,7 +27,7 @@ const { data } = Astro.props;
     <h2 class="text-3xl font-serif max-w-xl lg:text-5xl lg:max-w-2xl text-gray-200">
       ::::::::
     </h2>
-    <p class="text-md lg:text-lg w-[40vw] text-center"
+    <p class="text-lg lg:text-xl w-[90vw] lg:w-[40vw] text-center pb-5"
       set:html={data.text}
     >
     </p>
