--- a/src/components/ContactUsHeader.astro
+++ b/src/components/ContactUsHeader.astro
@@ -15,7 +15,7 @@ const { data } = Astro.props;
 <header
   class="relative isolate pt-20 lg:pt-14 overflow-hidden min-h-fit h-[40vh] lg:h-[85vh] text-white flex
     items-center bg-bottom bg-cover"
-  style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.5) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(./${data.headerImage})`
+  style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.3) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(./${data.headerImage})`
 >
   <div
     class="flex flex-col items-center gap-4 lg:gap-8 sm:translate-y-20 mx-auto"
@@ -24,7 +24,7 @@ const { data } = Astro.props;
       class="text-4xl max-w-2xl text-center font-semibold lg:text-8xl lg:max-w-4xl"
       set:html={data.title}
     />
-    <h2 class="text-3xl font-serif max-w-xl lg:text-5xl lg:max-w-2xl text-gray-200">
+    <h2 class="text-3xl font-serif max-w-xl lg:text-5xl lg:max-w-2xl text-gray-200 py-12 lg:py-0">
       ::::::::
     </h2>
     <p class="text-lg lg:text-xl w-[90vw] lg:w-[40vw] text-center pb-5"
