--- a/src/components/HomepageHeader.astro
+++ b/src/components/HomepageHeader.astro
@@ -29,7 +29,7 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
     <Image
     src={HeroImage}
     alt="Pilotos en iFly"
-    class="absolute top-0 w-full h-full object-cover -z-50"
+    class="absolute top-0 w-full h-full object-cover lg:object-center -z-50"
     quality={100}
     />
     <Image
