--- a/src/pages/flota/aviones/index.astro
+++ b/src/pages/flota/aviones/index.astro
@@ -32,7 +32,7 @@ const data = {
         </p>
       </div>
 
-      <div class="grid gap-8 mt-5 max-w-lg lg:max-w-none mx-auto">
+      <div class="grid gap-8 mt-5 max-w-lg lg:max-w-none mx-auto justify-center">
         {aviones.map((plane) => <PlaneCard2 planeData={plane.data} />)}
       </div>
     </div>
